@@ -343,13 +343,22 @@
     <Compile Include="Bugs\IoC-267.cs" />
     <Compile Include="ByRefDependenciesTestCase.cs" />
     <Compile Include="ClassComponents\CBA.cs" />
+    <Compile Include="ClassComponents\CustomerRepository.cs" />
+    <Compile Include="ClassComponents\DecoratedRepository.cs" />
+    <Compile Include="ClassComponents\DecoratedRepository2.cs" />
+    <Compile Include="ClassComponents\DefaultRepository.cs" />
+    <Compile Include="ClassComponents\DoubleRepository.cs" />
     <Compile Include="ClassComponents\GenericHasNested.cs" />
     <Compile Include="ClassComponents\GenericImpl3.cs" />
     <Compile Include="ClassComponents\HasByRefCtorArgument.cs" />
     <Compile Include="ClassComponents\HasCtorDependency.cs" />
     <Compile Include="ClassComponents\HasNestedType.cs" />
+    <Compile Include="ClassComponents\IRepository.cs" />
     <Compile Include="ClassComponents\Noop2Facility.cs" />
     <Compile Include="ClassComponents\NoopFacility.cs" />
+    <Compile Include="ClassComponents\Repository1.cs" />
+    <Compile Include="ClassComponents\Repository2.cs" />
+    <Compile Include="ClassComponents\Repository3.cs" />
     <Compile Include="ClassInheritanceTestCase.cs" />
     <Compile Include="ComponentsParametersDivisionTestsCase.cs" />
     <Compile Include="Components\ArrayRefDepAsConstructor.cs" />
@@ -632,6 +641,7 @@
     <Compile Include="Registration\WithServiceTestCase.cs" />
     <Compile Include="ServiceOverridesStackOverflowTestCase.cs" />
     <Compile Include="SpecializedResolvers\CollectionResolverTestCase.cs" />
+    <Compile Include="StubGenericImplementationMatchingStrategy.cs" />
     <Compile Include="SynchronizeFacility\Components\ClassInDepdnencyContextWithMissingDependency.cs" />
     <Compile Include="SynchronizeFacility\Components\ClassInDispatcherContextWithoutVirtualMethod.cs" />
     <Compile Include="SynchronizeFacility\Components\ClassUsingDispatcherContext.cs" />
