@@ -156,6 +156,17 @@ namespace Castle.MicroKernel.Handlers
 
 				return ComponentModel.Implementation.MakeGenericType(genericArguments);
 			}
+			catch (ArgumentNullException)
+			{
+				if (implementationMatchingStrategy == null)
+				{
+					// NOTE: if we're here something is badly screwed...
+					throw;
+				}
+				throw new HandlerException(
+					string.Format("Custom {0} ({1}) didn't select any generic parameters for implementation type of component '{2}'. This usually signifies bug in the {0}.",
+					              typeof(IGenericImplementationMatchingStrategy).Name, implementationMatchingStrategy, ComponentModel.Name));
+			}
 			catch (ArgumentException e)
 			{
 				// may throw in some cases when impl has generic constraints that service hasn't
@@ -166,17 +177,28 @@ namespace Castle.MicroKernel.Handlers
 
 				// ok, let's do some investigation now what might have been the cause of the error
 				var arguments = ComponentModel.Implementation.GetGenericArguments();
+				string message;
 				if (arguments.Length > genericArguments.Length)
 				{
-					var message =
-						string.Format(
-							"Requested type {0} has {1} generic parameter(s), whereas component implementation type {2} requires {3}. This means that Windsor does not have enough information to properly create that component for you. This is most likely a bug in your registration code.",
-							context.RequestedType, context.GenericArguments.Length, ComponentModel.Implementation, arguments.Length);
+					message = string.Format(
+						"Requested type {0} has {1} generic parameter(s), whereas component implementation type {2} requires {3}. This means that Windsor does not have enough information to properly create that component for you. This is most likely a bug in your registration code.",
+						context.RequestedType,
+						context.GenericArguments.Length,
+						ComponentModel.Implementation,
+						arguments.Length);
 					throw new HandlerException(message, e);
 				}
 				// we have correct number of generic arguments, that means probably some generic constraing was violated.
-				// the CLR exception should suffice
-				throw;
+				// the CLR exception wrapped in little context should suffice
+				if (implementationMatchingStrategy == null)
+				{
+					// NOTE: if we're here something is badly screwed...
+					throw;
+				}
+				message = string.Format(
+					"Types selected by {0} couldn't be used for generic arguments of implementation type for component {1}. See inner exception for more details.",
+					implementationMatchingStrategy, ComponentModel.Name);
+				throw new HandlerException(message, e);
 			}
 		}
 
